--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,5 @@
 == README
+just another useless app, lol
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
